# drumtrack

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/ml/: classifier.py  drum_classifier_model.py  drum_map.py  feature_extractor.py  mdx23c.py
backend/app/models/: cluster.py  drum_event.py  job.py
backend/app/routers/: jobs.py  samples.py  upload.py
backend/app/services/: crash_analysis.py  demucs.py  drum_classifier.py  drum_clusterer.py  drumsep.py  hihat_pattern.py  lalal.py  midi_writer.py  peak_detection.py  pipeline.py  tempo.py  youtube.py
backend/app/storage/: file_manager.py  job_store.py
backend/eval/: evaluate.py  generate_dataset.py  metrics.py  patterns.py  report.py  results.json
backend/eval/dataset-noisy/half_time/: meta.json
backend/eval/dataset-noisy/kick_heavy/: ground_truth.json  meta.json
backend/eval/dataset-noisy/open_hihat/: ground_truth.json  meta.json
backend/eval/dataset-noisy/ride_groove/: meta.json
backend/eval/dataset-noisy/rock_beat/: ground_truth.json  meta.json
backend/eval/dataset-noisy/rock_beat_16ths/: ground_truth.json  meta.json
backend/eval/dataset-noisy/tom_fill/: meta.json
backend/eval/dataset/half_time/: ground_truth.json  meta.json
backend/eval/dataset/kick_heavy/: meta.json
backend/eval/dataset/open_hihat/: meta.json
backend/eval/dataset/ride_groove/: ground_truth.json  meta.json
backend/eval/dataset/rock_beat/: meta.json
backend/eval/dataset/rock_beat_16ths/: meta.json
backend/eval/midis/: half_time.mid  kick_heavy.mid  open_hihat.mid  ride_groove.mid  rock_beat.mid  rock_beat_16ths.mid  tom_fill.mid
(+46 files in other folders)
