[project]
name = "drumtrack-backend"
version = "0.1.0"
description = "DrumTrack backend - drum isolation & MIDI generation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.18",
    "httpx>=0.28.0",
    "pydantic-settings>=2.7.0",
    "librosa>=0.10.2",
    "numpy>=1.26.0",
    "pretty-midi>=0.2.10",
    "yt-dlp>=2024.12.0",
    "soundfile>=0.12.1",
    "demucs>=4.0.1",
    "ml-collections>=0.1.1",
    "pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"app/ml/*" = ["E741", "B007", "RUF059"]
"app/services/drumsep.py" = ["SIM117", "SIM108", "RUF005", "B905"]
"app/routers/upload.py" = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
